vlib/v/checker/tests/generics_fn_arg_type_err.vv
interface List<T> {
mut:
	add(e T) bool
}

struct LinkedList<T> {
	// ...
}

fn (mut list LinkedList<T>) add(e T) {
	// ...
}

fn do_list_thing(list List) { // <--- Error here
	// ...
}

fn main() {
}
